letter spacing issue on OW-HP

--- a/assets/assets/styles/sapient.ourwine-hp.less
+++ b/assets/assets/styles/sapient.ourwine-hp.less
@@ -139,6 +139,10 @@
 		margin: 0 auto;
 		max-width: 770px;
 
+		p.header_f {
+			letter-spacing: 2px;
+		}
+
 		h2 {
 			margin-bottom: 30px;
 		}
